kubernetes/sipserver-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sipserver
  labels:
    app: sipserver
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sipserver
  template:
    metadata:
      labels:
        name: sipserver
    spec:
      containers:
        - name: sipserver
          image: driftwood64/a2billing-docker-sip-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5038
---
# START Service
apiVersion: v1
kind: Service
metadata:
  name: sipserver
  labels:
    app: sipserver
spec:
  type: LoadBalancer
  ports:
    # Equivalent to 5060:80 in docker-compose
    - port: 5038 #port that the service exposes
      targetPort: 80 #port that the app is receiving requests from via the pod
  selector:
    name: sipserver
# END SERVICE
