kubernetes/web-admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-admin
  labels:
    app: web-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web-admin
  template:
    metadata:
      labels:
        name: web-admin
    spec:
      containers:
        - name: a2billing
          image: driftwood64/a2billing-docker-web-admin:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
# START Service
apiVersion: v1
kind: Service
metadata:
  name: web-admin
  labels:
    app: web-admin
spec:
  type: LoadBalancer
  ports:
    - port: 8090 #port that the service exposes
      targetPort: 80 #port that the app is receiving requests from via the pod
  selector:
    name: web-admin
# END SERVICE
