kubernetes/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
        - name: a2billing
          image: driftwood64/a2billing-docker-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
# START Service
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  type: LoadBalancer
  ports:
    - port: 80 #port that the service exposes
      targetPort: 80 #port that the app is receiving requests from via the pod
  selector:
    name: web
# END SERVICE
