kubernetes/phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-phpmyadmin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: cluster
    http: 
      paths:
        - path: /phpmyadmin
          pathType: Prefix
          backend:
            service:
              name: phpmyadmin
              port:
                # the TargetPort in Service
                number: 80
