kubernetes/sipserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sipserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: cluster
    http: 
      paths:
        - path: /sipserver
          pathType: Prefix
          backend:
            service:
              name: sipserver
              port:
                # the TargetPort in Service
                number: 80
