kubernetes/web-customer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web-customer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: cluster
    http: 
      paths:
        - path: /customer
          pathType: Prefix
          backend:
            service:
              name: web-customer
              port:
                number: 80
